@@ -1,7 +1,7 @@
 Package: tm
 Title: Text Mining Package
-Version: 0.5-2.3
-Date: 2010-02-06
+Version: 0.5-2.4
+Date: 2010-02-18
 Author: Ingo Feinerer
 Maintainer: Ingo Feinerer <feinerer@logic.at>
 Depends: R (>= 2.10.0), methods
